add a link to the qr code generator blog

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       </label>
       <div><img id="image"/></div>
       <div id="results"></div>
+      <div style="margin-top:2em;">You can find some sample QR codes in <a href="https://www.dynamsoft.com/codepool/python-qr-code-generator.html" target="_blank">this blog</a>.</div>
       <div id="cameraViewContainer">
         <button id="stopScanBtn">Close</button>
       </div>
