sample: add onchange event for the data type select

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
         stopScanning();
       })
 
+      document.getElementById("dataTypeSelect").addEventListener("change",function(){
+        decodeImage();
+      })
+
       document.getElementById("fileInput").addEventListener("change",function(){
         let fileInput = document.getElementById("fileInput");
         let files = fileInput.files;
