allow specifying the text encoding

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
           <option>Unknown</option>
         </select>
       </label>
+      <label>
+        Text encoding:
+        <select id="encodingSelect">
+          <option value="auto">Auto Detect</option>
+        </select>
+      </label>
       <div><img id="image"/></div>
       <div id="results"></div>
       <div style="margin-top:2em;">You can find some sample QR codes in <a href="https://www.dynamsoft.com/codepool/python-qr-code-generator.html" target="_blank">this blog</a>.</div>
@@ -86,6 +92,7 @@
     let scanningMode = false;
     let dataReader;
     window.onload = function(){
+      loadEncodings();
       dataReader = new BarcodeDataReader();
       document.getElementById("saveLicenseBtn").addEventListener("click",function(){
         updateStatus("Loading...");
@@ -95,6 +102,18 @@
         init();
       });
       showLicenseModal();
+    }
+
+    function loadEncodings(){
+      const encodingSelect = document.getElementById("encodingSelect");
+      const encodings = ["ascii","big5","big5hkscs","cp037","cp273","cp424","cp437","cp500","cp720","cp737","cp775","cp850","cp852","cp855","cp856","cp857","cp858","cp860","cp861","cp862","cp863","cp864","cp865","cp866","cp869","cp874","cp875","cp932","cp949","cp950","cp1006","cp1026","cp1125","cp1140","cp1250","cp1251","cp1252","cp1253","cp1254","cp1255","cp1256","cp1257","cp1258","euc_jp","euc_jis_2004","euc_jisx0213","euc_kr","gb2312","gbk","gb18030","hz","iso2022_jp","iso2022_jp_1","iso2022_jp_2","iso2022_jp_2004","iso2022_jp_3","iso2022_jp_ext","iso2022_kr","latin_1","iso8859_2","iso8859_3","iso8859_4","iso8859_5","iso8859_6","iso8859_7","iso8859_8","iso8859_9","iso8859_10","iso8859_11","iso8859_13","iso8859_14","iso8859_15","iso8859_16","johab","koi8_r","koi8_t","koi8_u","kz1048","mac_cyrillic","mac_greek","mac_iceland","mac_latin2","mac_roman","mac_turkish","ptcp154","shift_jis","shift_jis_2004","shift_jisx0213","utf_32","utf_32_be","utf_32_le","utf_16","utf_16_be","utf_16_le","utf_7","utf_8","utf_8_sig"];
+      let utf8Index = encodings.indexOf("utf_8");
+      for (let index = 0; index < encodings.length; index++) {
+        const encoding = encodings[index];
+        let option = new Option(encoding,encoding);
+        encodingSelect.appendChild(option);
+      }
+      encodingSelect.selectedIndex = utf8Index + 1;
     }
 
     function showLicenseModal(){
@@ -183,6 +202,10 @@
     }
 
     async function handleResult(result){
+      let encoding = document.getElementById("encodingSelect").selectedOptions[0].value;
+      if (encoding === "auto") {
+        encoding = undefined;
+      }
       let dataType = document.getElementById("dataTypeSelect").selectedIndex;
       let barcodes = [];
       for (let index = 0; index < result.items.length; index++) {
@@ -200,7 +223,7 @@
         }
       }
       console.log(barcodes);
-      let results = await dataReader.read(barcodes,dataType)
+      let results = await dataReader.read(barcodes,dataType,encoding)
       console.log(results);
       let resultsContainer = document.getElementById("results");
       resultsContainer.innerHTML = "";
