--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
   </style>
   <script type="module">
-    import { BarcodeDataReader } from 'https://cdn.jsdelivr.net/npm/barcode-data-reader@0.3.0/dist/barcode-data-reader.js';
+    import { BarcodeDataReader } from 'https://cdn.jsdelivr.net/npm/barcode-data-reader@0.2.0/dist/barcode-data-reader.js';
     window["BarcodeDataReader"] = BarcodeDataReader;
   </script>
 </head>
@@ -110,14 +110,12 @@
 
     function loadEncodings(){
       const encodingSelect = document.getElementById("encodingSelect");
-      const encodings = ["ascii","big5","big5hkscs","cp037","cp273","cp424","cp437","cp500","cp720","cp737","cp775","cp850","cp852","cp855","cp856","cp857","cp858","cp860","cp861","cp862","cp863","cp864","cp865","cp866","cp869","cp874","cp875","cp932","cp949","cp950","cp1006","cp1026","cp1125","cp1140","cp1250","cp1251","cp1252","cp1253","cp1254","cp1255","cp1256","cp1257","cp1258","euc_jp","euc_jis_2004","euc_jisx0213","euc_kr","gb2312","gbk","gb18030","hz","iso2022_jp","iso2022_jp_1","iso2022_jp_2","iso2022_jp_2004","iso2022_jp_3","iso2022_jp_ext","iso2022_kr","latin_1","iso8859_2","iso8859_3","iso8859_4","iso8859_5","iso8859_6","iso8859_7","iso8859_8","iso8859_9","iso8859_10","iso8859_11","iso8859_13","iso8859_14","iso8859_15","iso8859_16","johab","koi8_r","koi8_t","koi8_u","kz1048","mac_cyrillic","mac_greek","mac_iceland","mac_latin2","mac_roman","mac_turkish","ptcp154","shift_jis","shift_jis_2004","shift_jisx0213","utf_32","utf_32_be","utf_32_le","utf_16","utf_16_be","utf_16_le","utf_7","utf_8","utf_8_sig"];
-      let utf8Index = encodings.indexOf("utf_8");
+      const encodings = ["ascii","big5","big5hkscs","cp037","cp273","cp424","cp437","cp500","cp720","cp737","cp775","cp850","cp852","cp855","cp856","cp857","cp858","cp860","cp861","cp862","cp863","cp864","cp865","cp866","cp869","cp874","cp875","cp932","cp949","cp950","cp1006","cp1026","cp1125","cp1140","cp1250","cp1251","cp1252","cp1253","cp1254","cp1255","cp1256","cp1257","cp1258","euc-jp","euc-jis-2004","euc-jisx0213","euc-kr","gb2312","gbk","gb18030","hz","iso2022-jp","iso2022-jp-1","iso2022-jp-2","iso2022-jp-2004","iso2022-jp-3","iso2022-jp-ext","iso2022-kr","latin-1","iso8859-2","iso8859-3","iso8859-4","iso8859-5","iso8859-6","iso8859-7","iso8859-8","iso8859-9","iso8859-10","iso8859-11","iso8859-13","iso8859-14","iso8859-15","iso8859-16","johab","koi8-r","koi8-t","koi8-u","kz1048","mac-cyrillic","mac-greek","mac-iceland","mac-latin2","mac-roman","mac-turkish","ptcp154","shift-jis","shift-jis-2004","shift-jisx0213","utf-32","utf-32-be","utf-32-le","utf-16","utf-16-be","utf-16-le","utf-7","utf-8","utf-8-sig"];
       for (let index = 0; index < encodings.length; index++) {
         const encoding = encodings[index];
         let option = new Option(encoding,encoding);
         encodingSelect.appendChild(option);
       }
-      encodingSelect.selectedIndex = utf8Index + 1;
     }
 
     function showLicenseModal(){
@@ -173,6 +171,10 @@
       })
 
       document.getElementById("dataTypeSelect").addEventListener("change",function(){
+        decodeImage();
+      })
+
+      document.getElementById("encodingSelect").addEventListener("change",function(){
         decodeImage();
       })
 
