--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
     async function init(){
       Dynamsoft.License.LicenseManager.initLicense(license);
+      await Dynamsoft.Core.CoreModule.loadWasm(["cvr", "dbr"]);
       router = await Dynamsoft.CVR.CaptureVisionRouter.createInstance();
 
       view = await Dynamsoft.DCE.CameraView.createInstance();
