--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
     }
 
     img {
-      max-width: 250px;
+      max-width: 200px;
+    }
+
+    #image {
+      max-width: 400px;
     }
   </style>
 </head>
@@ -57,6 +61,7 @@
         <select id="dataTypeSelect">
           <option>Text</option>
           <option>Image</option>
+          <option>SVG</option>
           <option>Unknown</option>
         </select>
       </label>
@@ -234,7 +239,7 @@
           let para = document.createElement("p");
           para.innerText = results[index].text;
           resultsContainer.appendChild(para);
-        }else if (dataType == 1) {
+        }else if (dataType == 1 || dataType == 2) {
           resultsContainer.appendChild(results[index].img);
         }else {
           let a = document.createElement("a");
