--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
     }
 
     img {
-      max-width: 250px;
+      max-width: 200px;
+    }
+
+    #image {
+      max-width: 400px;
     }
   </style>
   <script type="module">
-    import { BarcodeDataReader } from 'https://cdn.jsdelivr.net/npm/barcode-data-reader@0.3.0/dist/barcode-data-reader.js';
+    import { BarcodeDataReader } from 'https://cdn.jsdelivr.net/npm/barcode-data-reader@0.4.0/dist/barcode-data-reader.js';
     window["BarcodeDataReader"] = BarcodeDataReader;
   </script>
 </head>
@@ -61,6 +65,7 @@
         <select id="dataTypeSelect">
           <option>Text</option>
           <option>Image</option>
+          <option>SVG</option>
           <option>Unknown</option>
         </select>
       </label>
@@ -135,7 +140,6 @@
       Dynamsoft.License.LicenseManager.initLicense(license);
       await Dynamsoft.Core.CoreModule.loadWasm(["cvr", "dbr"]);
       router = await Dynamsoft.CVR.CaptureVisionRouter.createInstance();
-
       view = await Dynamsoft.DCE.CameraView.createInstance();
       cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view);
       document.getElementById("cameraViewContainer").append(view.getUIElement());
@@ -239,7 +243,7 @@
           let para = document.createElement("p");
           para.innerText = results[index].text;
           resultsContainer.appendChild(para);
-        }else if (dataType == 1) {
+        }else if (dataType == 1 || dataType == 2) {
           resultsContainer.appendChild(results[index].img);
         }else {
           let a = document.createElement("a");
